# mlops_project_mhmdjawadahamd_jreigefinianos

./: README.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml  dockerbuild.yml
ml_data_pipeline/: Dockerfile  pyproject.toml  tasks.py
ml_data_pipeline/.github/workflows/: dockerbuild.yml
ml_data_pipeline/config/: config.yaml
ml_data_pipeline/docs/ml_data_pipeline/: config.html  index.html
ml_data_pipeline/docs/ml_data_pipeline/data_loader/: csv_loader.html  factory.html  index.html
ml_data_pipeline/mlruns/169476746681472375/: meta.yaml
ml_data_pipeline/mlruns/169476746681472375/3d037e0d5b55400a8228030c9ce04ebd/metrics/: accuracy
ml_data_pipeline/mlruns/169476746681472375/3d037e0d5b55400a8228030c9ce04ebd/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
ml_data_pipeline/mlruns/169476746681472375/5fee6c4468cc44ba8dec67223d3087f9/: meta.yaml
ml_data_pipeline/mlruns/169476746681472375/5fee6c4468cc44ba8dec67223d3087f9/metrics/: accuracy
ml_data_pipeline/mlruns/169476746681472375/5fee6c4468cc44ba8dec67223d3087f9/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
ml_data_pipeline/mlruns/169476746681472375/a043c28612954ac783acd7e9f78a7a9a/: meta.yaml
ml_data_pipeline/mlruns/169476746681472375/c175dc3f9a4c4f46b3cb815f5e818cc6/: meta.yaml
ml_data_pipeline/src/ml_data_pipeline/: config.py  data_loader.py  main.py
ml_data_pipeline/src/ml_data_pipeline/data_loader/: __init__.py  base_loader.py  csv_loader.py  factory.py  json_loader.py
tests/: test_data_loader.py
(+29 files in other folders)
