[tool.poetry]
name = "ml-data-pipeline"
version = "0.1.0"
description = ""
authors = ["Jreige Finianos <jreigefin@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_data_pipeline", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
omegaconf = "^2.3.0"
pydantic = "^2.10.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
mypy = "^1.13.0"
pytest = "^8.3.4"
pyinvoke = "^1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
data-pipeline = "ml_data_pipeline.main:main"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F"] # Specify the types of rules to enforce
ignore = ["E501"] # Ignore line length warnings

[tool.ruff.format]
quote-style = "double" # Like Black, use double quotes for strings.
indent-style = "space" # Like Black, indent with spaces, rather than tabs.